Create KAS-737 integration baseline
